--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,16 @@
 version: '3.8'
+
 services:
-  web:
-    build: .
-    ports:
-      - "3000:3000"
-    volumes:
-      - .:/usr/src/app
-      - /usr/src/app/node_modules
+  webserver:
+  container_name: nodeJsContainer
+  build: ./src
+  command: bash -c 'while !</dev/tcp/database/3306; do sleep 1; done; npm start'
+  depends_on:
+     - database
+  restart: on-failure
     environment:
-      - NODE_ENV=development
+      - DATABASE_HOST=database
+    ports:
+      - 3000:3000
+    networks:
+      - app-tier
