--- a/src/package.json
+++ b/src/package.json
@@ -1,11 +1,7 @@
 {
-  "dependencies": {
-    "express": "^4.18.2",
-    "pug": "^3.0.2"
-  },
   "name": "finalproject",
-  "description": "",
   "version": "1.0.0",
+  "description": "",
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
@@ -13,5 +9,12 @@
   },
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.2",
+    "pug": "^3.0.2"
+  },
+  "engines": {
+    "node": "20.x"
+  },
   "devDependencies": {}
 }
