--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
+    "mongodb": "^6.5.0",
     "mongoose": "^8.3.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
