--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "connect-ensure-login": "^0.1.1",
     "connect-mongo": "^5.1.0",
-    "express": "^4.18.2",
+    "express": "^4.19.2",
     "express-session": "^1.18.0",
     "mongodb": "^6.5.0",
-    "mongoose": "^8.3.0",
+    "mongoose": "^8.3.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pug": "^3.0.2"
